[project]
name = "video-summary"
version = "0.1.0"
description = "CLI prototype for summarizing subtitled YouTube videos into Markdown notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
youtube = ["yt-dlp>=2025.1.1"]
asr = ["faster-whisper>=1.1.0"]
all = ["yt-dlp>=2025.1.1", "faster-whisper>=1.1.0"]

[project.scripts]
video-summary = "video_summary.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
