[project]
name = "video-summary"
version = "0.1.0"
description = "CLI prototype for summarizing subtitled YouTube videos into Markdown notes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli>=2.0.1; python_version < '3.11'"]

[project.optional-dependencies]
youtube = ["yt-dlp>=2025.1.1"]
asr = ["faster-whisper>=1.1.0", "imageio-ffmpeg>=0.5.1"]
all = ["yt-dlp>=2025.1.1", "faster-whisper>=1.1.0", "imageio-ffmpeg>=0.5.1"]

[project.scripts]
video-summary = "video_summary.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
